--- a/ROBUSPixelArt404/app/src/main/res/values/strings.xml
+++ b/ROBUSPixelArt404/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">ROBUS Pixel Art 404</string>
     <string name="title">Pixel Art 404</string>
-    <string name="scan">Scanner un dessin</string>
+    <string name="scan">Scanner</string>
     <string name="draw">Dessiner</string>
     <string name="question">Question</string>
     <string name="start_scan">Cliquez ici pour scanner</string>
